// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Valid Call calculateTransitsForRange with valid parameters 1`] = `
{
  "dominantAspectTypes": [
    {
      "aspect": "Trine",
      "count": 52,
    },
    {
      "aspect": "Conjunction",
      "count": 26,
    },
    {
      "aspect": "Square",
      "count": 39,
    },
    {
      "aspect": "Sextile",
      "count": 38,
    },
    {
      "aspect": "Opposition",
      "count": 28,
    },
    {
      "aspect": "Semi Square",
      "count": 20,
    },
    {
      "aspect": "Quincunx",
      "count": 14,
    },
    {
      "aspect": "Sesquiquadrate",
      "count": 25,
    },
  ],
  "dominantHouses": [
    {
      "count": 113,
      "houseNumber": 1,
    },
    {
      "count": 106,
      "houseNumber": 4,
    },
    {
      "count": 54,
      "houseNumber": 2,
    },
    {
      "count": 56,
      "houseNumber": 8,
    },
    {
      "count": 29,
      "houseNumber": 11,
    },
    {
      "count": 29,
      "houseNumber": 7,
    },
    {
      "count": 26,
      "houseNumber": 3,
    },
    {
      "count": 20,
      "houseNumber": 6,
    },
  ],
  "dominantPlanets": [
    {
      "count": 33,
      "planet": "Sun",
    },
    {
      "count": 40,
      "planet": "Venus",
    },
    {
      "count": 32,
      "planet": "Lilith",
    },
    {
      "count": 36,
      "planet": "Mercury",
    },
    {
      "count": 39,
      "planet": "True North Node",
    },
    {
      "count": 39,
      "planet": "True South Node",
    },
    {
      "count": 35,
      "planet": "Neptune",
    },
    {
      "count": 111,
      "planet": "Moon",
    },
  ],
  "dominantSigns": [
    {
      "count": 111,
      "sign": "Pisces",
    },
    {
      "count": 83,
      "sign": "Aries",
    },
    {
      "count": 50,
      "sign": "Sagittarius",
    },
    {
      "count": 54,
      "sign": "Aquarius",
    },
    {
      "count": 57,
      "sign": "Libra",
    },
    {
      "count": 71,
      "sign": "Leo",
    },
    {
      "count": 30,
      "sign": "Taurus",
    },
    {
      "count": 29,
      "sign": "Gemini",
    },
  ],
}
`;

exports[`Valid Call calculateTransitsForRange with valid parameters 2`] = `
[
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": true,
    "aspect": {
      "id": 0,
      "name": "Conjunction",
    },
    "exactInRange": true,
    "exactPeakTime": "2025-03-13T12:00:00.000Z",
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-13",
    "natalBody": "Neptune",
    "natalHouse": 2,
    "natalSign": "Aquarius",
    "rank": 1,
    "samples": [
      {
        "applying": true,
        "date": "2025-03-10",
        "natalHouse": 2,
        "natalSign": "Aquarius",
        "transitHouse": 2,
        "transitSign": "Aquarius",
      },
      {
        "applying": true,
        "date": "2025-03-11",
        "natalHouse": 2,
        "natalSign": "Aquarius",
        "transitHouse": 2,
        "transitSign": "Aquarius",
      },
      {
        "applying": true,
        "date": "2025-03-12",
        "natalHouse": 2,
        "natalSign": "Aquarius",
        "transitHouse": 2,
        "transitSign": "Aquarius",
      },
      {
        "applying": true,
        "date": "2025-03-13",
        "natalHouse": 2,
        "natalSign": "Aquarius",
        "transitHouse": 2,
        "transitSign": "Aquarius",
      },
      {
        "applying": false,
        "date": "2025-03-14",
        "natalHouse": 2,
        "natalSign": "Aquarius",
        "transitHouse": 2,
        "transitSign": "Aquarius",
      },
      {
        "applying": false,
        "date": "2025-03-15",
        "natalHouse": 2,
        "natalSign": "Aquarius",
        "transitHouse": 2,
        "transitSign": "Aquarius",
      },
      {
        "applying": false,
        "date": "2025-03-16",
        "natalHouse": 2,
        "natalSign": "Aquarius",
        "transitHouse": 2,
        "transitSign": "Aquarius",
      },
    ],
    "separatingAtEnd": true,
    "transitHouse": 2,
    "transitPlanet": "Pluto",
    "transitSign": "Aquarius",
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": true,
    "aspect": {
      "id": 9,
      "name": "Quintile",
    },
    "exactInRange": true,
    "exactPeakTime": "2025-03-12T12:00:00.000Z",
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-12",
    "natalBody": "Sun",
    "natalHouse": 1,
    "natalSign": "Capricorn",
    "rank": 2,
    "samples": [
      {
        "applying": true,
        "date": "2025-03-10",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 4,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-11",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 4,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-12",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-13",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-14",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-15",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-16",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
    ],
    "separatingAtEnd": true,
    "transitHouse": 4,
    "transitPlanet": "Saturn",
    "transitSign": "Pisces",
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": true,
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "exactInRange": true,
    "exactPeakTime": "2025-03-11T12:00:00.000Z",
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-11",
    "natalBody": "Ascendant",
    "natalHouse": 1,
    "natalSign": "Sagittarius",
    "rank": 3,
    "samples": [
      {
        "applying": true,
        "date": "2025-03-10",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-11",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-12",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-13",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-14",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-15",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-16",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
    ],
    "separatingAtEnd": true,
    "transitHouse": 1,
    "transitPlanet": "Venus",
    "transitSign": "Aries",
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": true,
    "aspect": {
      "id": 1,
      "name": "Opposition",
    },
    "exactInRange": false,
    "exactPeakTime": null,
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-16",
    "natalBody": "MidHeaven",
    "natalHouse": 10,
    "natalSign": "Libra",
    "rank": 4,
    "samples": [
      {
        "applying": true,
        "date": "2025-03-10",
        "natalHouse": 10,
        "natalSign": "Libra",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-11",
        "natalHouse": 10,
        "natalSign": "Libra",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-12",
        "natalHouse": 10,
        "natalSign": "Libra",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-13",
        "natalHouse": 10,
        "natalSign": "Libra",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-14",
        "natalHouse": 10,
        "natalSign": "Libra",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-15",
        "natalHouse": 10,
        "natalSign": "Libra",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-16",
        "natalHouse": 10,
        "natalSign": "Libra",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
    ],
    "separatingAtEnd": false,
    "transitHouse": 1,
    "transitPlanet": "Venus",
    "transitSign": "Aries",
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": true,
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "exactInRange": true,
    "exactPeakTime": "2025-03-11T12:00:00.000Z",
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-11",
    "natalBody": "Descendant",
    "natalHouse": 7,
    "natalSign": "Gemini",
    "rank": 5,
    "samples": [
      {
        "applying": true,
        "date": "2025-03-10",
        "natalHouse": 7,
        "natalSign": "Gemini",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-11",
        "natalHouse": 7,
        "natalSign": "Gemini",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-12",
        "natalHouse": 7,
        "natalSign": "Gemini",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-13",
        "natalHouse": 7,
        "natalSign": "Gemini",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-14",
        "natalHouse": 7,
        "natalSign": "Gemini",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-15",
        "natalHouse": 7,
        "natalSign": "Gemini",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-16",
        "natalHouse": 7,
        "natalSign": "Gemini",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
    ],
    "separatingAtEnd": true,
    "transitHouse": 1,
    "transitPlanet": "Venus",
    "transitSign": "Aries",
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": true,
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "exactInRange": true,
    "exactPeakTime": "2025-03-13T12:00:00.000Z",
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-13",
    "natalBody": "Ascendant",
    "natalHouse": 1,
    "natalSign": "Sagittarius",
    "rank": 6,
    "samples": [
      {
        "applying": true,
        "date": "2025-03-10",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-11",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-12",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-13",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-14",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-15",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-16",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
    ],
    "separatingAtEnd": false,
    "transitHouse": 1,
    "transitPlanet": "Mercury",
    "transitSign": "Aries",
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": true,
    "aspect": {
      "id": 0,
      "name": "Conjunction",
    },
    "exactInRange": false,
    "exactPeakTime": null,
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-16",
    "natalBody": "Nadir",
    "natalHouse": 4,
    "natalSign": "Aries",
    "rank": 7,
    "samples": [
      {
        "applying": true,
        "date": "2025-03-10",
        "natalHouse": 4,
        "natalSign": "Aries",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-11",
        "natalHouse": 4,
        "natalSign": "Aries",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-12",
        "natalHouse": 4,
        "natalSign": "Aries",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-13",
        "natalHouse": 4,
        "natalSign": "Aries",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-14",
        "natalHouse": 4,
        "natalSign": "Aries",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-15",
        "natalHouse": 4,
        "natalSign": "Aries",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-16",
        "natalHouse": 4,
        "natalSign": "Aries",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
    ],
    "separatingAtEnd": false,
    "transitHouse": 1,
    "transitPlanet": "Venus",
    "transitSign": "Aries",
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": false,
    "aspect": {
      "id": 9,
      "name": "Quintile",
    },
    "exactInRange": true,
    "exactPeakTime": "2025-03-10T12:00:00.000Z",
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-10",
    "natalBody": "Sun",
    "natalHouse": 1,
    "natalSign": "Capricorn",
    "rank": 8,
    "samples": [
      {
        "applying": false,
        "date": "2025-03-10",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 11,
        "transitSign": "Libra",
      },
      {
        "applying": false,
        "date": "2025-03-11",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 11,
        "transitSign": "Libra",
      },
      {
        "applying": false,
        "date": "2025-03-12",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 11,
        "transitSign": "Libra",
      },
      {
        "applying": false,
        "date": "2025-03-13",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 11,
        "transitSign": "Libra",
      },
      {
        "applying": false,
        "date": "2025-03-14",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 11,
        "transitSign": "Libra",
      },
      {
        "applying": false,
        "date": "2025-03-15",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 11,
        "transitSign": "Libra",
      },
      {
        "applying": false,
        "date": "2025-03-16",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 11,
        "transitSign": "Libra",
      },
    ],
    "separatingAtEnd": true,
    "transitHouse": 11,
    "transitPlanet": "Lilith",
    "transitSign": "Libra",
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": true,
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "exactInRange": true,
    "exactPeakTime": "2025-03-13T12:00:00.000Z",
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-13",
    "natalBody": "Descendant",
    "natalHouse": 7,
    "natalSign": "Gemini",
    "rank": 9,
    "samples": [
      {
        "applying": true,
        "date": "2025-03-10",
        "natalHouse": 7,
        "natalSign": "Gemini",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-11",
        "natalHouse": 7,
        "natalSign": "Gemini",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-12",
        "natalHouse": 7,
        "natalSign": "Gemini",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-13",
        "natalHouse": 7,
        "natalSign": "Gemini",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-14",
        "natalHouse": 7,
        "natalSign": "Gemini",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-15",
        "natalHouse": 7,
        "natalSign": "Gemini",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-16",
        "natalHouse": 7,
        "natalSign": "Gemini",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
    ],
    "separatingAtEnd": false,
    "transitHouse": 1,
    "transitPlanet": "Mercury",
    "transitSign": "Aries",
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": false,
    "aspect": {
      "id": 2,
      "name": "Square",
    },
    "exactInRange": false,
    "exactPeakTime": null,
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-10",
    "natalBody": "Sun",
    "natalHouse": 1,
    "natalSign": "Capricorn",
    "rank": 10,
    "samples": [
      {
        "applying": false,
        "date": "2025-03-10",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-11",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-12",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-13",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-14",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-15",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-16",
        "natalHouse": 1,
        "natalSign": "Capricorn",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
    ],
    "separatingAtEnd": true,
    "transitHouse": 1,
    "transitPlanet": "Venus",
    "transitSign": "Aries",
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": true,
    "aspect": {
      "id": 2,
      "name": "Square",
    },
    "exactInRange": true,
    "exactPeakTime": "2025-03-14T12:00:00.000Z",
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-14",
    "natalBody": "Lilith",
    "natalHouse": 1,
    "natalSign": "Sagittarius",
    "rank": 11,
    "samples": [
      {
        "applying": true,
        "date": "2025-03-10",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-11",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-12",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-13",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-14",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-15",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-16",
        "natalHouse": 1,
        "natalSign": "Sagittarius",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
    ],
    "separatingAtEnd": true,
    "transitHouse": 3,
    "transitPlanet": "Sun",
    "transitSign": "Pisces",
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": true,
    "aspect": {
      "id": 3,
      "name": "Semi Square",
    },
    "exactInRange": false,
    "exactPeakTime": null,
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-16",
    "natalBody": "Uranus",
    "natalHouse": 2,
    "natalSign": "Aquarius",
    "rank": 12,
    "samples": [
      {
        "applying": true,
        "date": "2025-03-10",
        "natalHouse": 2,
        "natalSign": "Aquarius",
        "transitHouse": 4,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-11",
        "natalHouse": 2,
        "natalSign": "Aquarius",
        "transitHouse": 4,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-12",
        "natalHouse": 2,
        "natalSign": "Aquarius",
        "transitHouse": 4,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-13",
        "natalHouse": 2,
        "natalSign": "Aquarius",
        "transitHouse": 4,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-14",
        "natalHouse": 2,
        "natalSign": "Aquarius",
        "transitHouse": 4,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-15",
        "natalHouse": 2,
        "natalSign": "Aquarius",
        "transitHouse": 4,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-16",
        "natalHouse": 2,
        "natalSign": "Aquarius",
        "transitHouse": 4,
        "transitSign": "Pisces",
      },
    ],
    "separatingAtEnd": false,
    "transitHouse": 4,
    "transitPlanet": "Neptune",
    "transitSign": "Pisces",
  },
]
`;

exports[`Valid Call calculateTransitsForRange with valid parameters 3`] = `
[
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": true,
    "aspect": {
      "id": 0,
      "name": "Conjunction",
    },
    "exactInRange": false,
    "exactPeakTime": null,
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-12",
    "planet1": "Sun",
    "planet1House": 3,
    "planet1Sign": "Pisces",
    "planet2": "Saturn",
    "planet2House": 4,
    "planet2Sign": "Pisces",
    "rank": 1,
    "samples": [
      {
        "applying": true,
        "date": "2025-03-10",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-11",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-12",
        "natalHouse": 3,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-13",
        "natalHouse": 3,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-14",
        "natalHouse": 3,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-15",
        "natalHouse": 3,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-16",
        "natalHouse": 3,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
    ],
    "separatingAtEnd": true,
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": true,
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "exactInRange": false,
    "exactPeakTime": null,
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-14",
    "planet1": "Sun",
    "planet1House": 3,
    "planet1Sign": "Pisces",
    "planet2": "Uranus",
    "planet2House": 6,
    "planet2Sign": "Taurus",
    "rank": 2,
    "samples": [
      {
        "applying": true,
        "date": "2025-03-10",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-11",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-12",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-13",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-14",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-15",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-16",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
    ],
    "separatingAtEnd": true,
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": true,
    "aspect": {
      "id": 3,
      "name": "Semi Square",
    },
    "exactInRange": true,
    "exactPeakTime": "2025-03-12T12:00:00.000Z",
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-12",
    "planet1": "Venus",
    "planet1House": 1,
    "planet1Sign": "Aries",
    "planet2": "Uranus",
    "planet2House": 6,
    "planet2Sign": "Taurus",
    "rank": 3,
    "samples": [
      {
        "applying": true,
        "date": "2025-03-10",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-11",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-12",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-13",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-14",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-15",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-16",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
    ],
    "separatingAtEnd": true,
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": true,
    "aspect": {
      "id": 3,
      "name": "Semi Square",
    },
    "exactInRange": true,
    "exactPeakTime": "2025-03-12T12:00:00.000Z",
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-12",
    "planet1": "Mercury",
    "planet1House": 1,
    "planet1Sign": "Aries",
    "planet2": "Uranus",
    "planet2House": 6,
    "planet2Sign": "Taurus",
    "rank": 4,
    "samples": [
      {
        "applying": true,
        "date": "2025-03-10",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-11",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-12",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-13",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-14",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-15",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-16",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
    ],
    "separatingAtEnd": false,
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": false,
    "aspect": {
      "id": 4,
      "name": "Sesquiquadrate",
    },
    "exactInRange": true,
    "exactPeakTime": "2025-03-16T12:00:00.000Z",
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-16",
    "planet1": "Jupiter",
    "planet1House": 7,
    "planet1Sign": "Gemini",
    "planet2": "Lilith",
    "planet2House": 11,
    "planet2Sign": "Libra",
    "rank": 5,
    "samples": [
      {
        "applying": false,
        "date": "2025-03-10",
        "natalHouse": 11,
        "natalSign": "Libra",
        "transitHouse": 7,
        "transitSign": "Gemini",
      },
      {
        "applying": false,
        "date": "2025-03-11",
        "natalHouse": 11,
        "natalSign": "Libra",
        "transitHouse": 7,
        "transitSign": "Gemini",
      },
      {
        "applying": false,
        "date": "2025-03-12",
        "natalHouse": 11,
        "natalSign": "Libra",
        "transitHouse": 7,
        "transitSign": "Gemini",
      },
      {
        "applying": false,
        "date": "2025-03-13",
        "natalHouse": 11,
        "natalSign": "Libra",
        "transitHouse": 7,
        "transitSign": "Gemini",
      },
      {
        "applying": true,
        "date": "2025-03-14",
        "natalHouse": 11,
        "natalSign": "Libra",
        "transitHouse": 7,
        "transitSign": "Gemini",
      },
      {
        "applying": true,
        "date": "2025-03-15",
        "natalHouse": 11,
        "natalSign": "Libra",
        "transitHouse": 7,
        "transitSign": "Gemini",
      },
      {
        "applying": true,
        "date": "2025-03-16",
        "natalHouse": 11,
        "natalSign": "Libra",
        "transitHouse": 7,
        "transitSign": "Gemini",
      },
    ],
    "separatingAtEnd": false,
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": true,
    "aspect": {
      "id": 0,
      "name": "Conjunction",
    },
    "exactInRange": true,
    "exactPeakTime": "2025-03-12T12:00:00.000Z",
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-12",
    "planet1": "Mercury",
    "planet1House": 1,
    "planet1Sign": "Aries",
    "planet2": "Venus",
    "planet2House": 1,
    "planet2Sign": "Aries",
    "rank": 6,
    "samples": [
      {
        "applying": true,
        "date": "2025-03-10",
        "natalHouse": 1,
        "natalSign": "Aries",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-11",
        "natalHouse": 1,
        "natalSign": "Aries",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": true,
        "date": "2025-03-12",
        "natalHouse": 1,
        "natalSign": "Aries",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-13",
        "natalHouse": 1,
        "natalSign": "Aries",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-14",
        "natalHouse": 1,
        "natalSign": "Aries",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-15",
        "natalHouse": 1,
        "natalSign": "Aries",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
      {
        "applying": false,
        "date": "2025-03-16",
        "natalHouse": 1,
        "natalSign": "Aries",
        "transitHouse": 1,
        "transitSign": "Aries",
      },
    ],
    "separatingAtEnd": true,
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": true,
    "aspect": {
      "id": 10,
      "name": "Bi Quintile",
    },
    "exactInRange": true,
    "exactPeakTime": "2025-03-16T12:00:00.000Z",
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-16",
    "planet1": "Saturn",
    "planet1House": 4,
    "planet1Sign": "Pisces",
    "planet2": "Lilith",
    "planet2House": 11,
    "planet2Sign": "Libra",
    "rank": 7,
    "samples": [
      {
        "applying": true,
        "date": "2025-03-10",
        "natalHouse": 11,
        "natalSign": "Libra",
        "transitHouse": 4,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-11",
        "natalHouse": 11,
        "natalSign": "Libra",
        "transitHouse": 4,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-12",
        "natalHouse": 11,
        "natalSign": "Libra",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-13",
        "natalHouse": 11,
        "natalSign": "Libra",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-14",
        "natalHouse": 11,
        "natalSign": "Libra",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-15",
        "natalHouse": 11,
        "natalSign": "Libra",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-16",
        "natalHouse": 11,
        "natalSign": "Libra",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
    ],
    "separatingAtEnd": false,
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": false,
    "aspect": {
      "id": 0,
      "name": "Conjunction",
    },
    "exactInRange": true,
    "exactPeakTime": "2025-03-10T12:00:00.000Z",
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-10",
    "planet1": "True North Node",
    "planet1House": 4,
    "planet1Sign": "Pisces",
    "planet2": "True South Node",
    "planet2House": 4,
    "planet2Sign": "Pisces",
    "rank": 8,
    "samples": [
      {
        "applying": false,
        "date": "2025-03-10",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 4,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-11",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 4,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-12",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 4,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-13",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 4,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-14",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 4,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-15",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 4,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-16",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 4,
        "transitSign": "Pisces",
      },
    ],
    "separatingAtEnd": true,
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": false,
    "aspect": {
      "id": 5,
      "name": "Trine",
    },
    "exactInRange": false,
    "exactPeakTime": null,
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-10",
    "planet1": "Sun",
    "planet1House": 3,
    "planet1Sign": "Pisces",
    "planet2": "Mars",
    "planet2House": 8,
    "planet2Sign": "Cancer",
    "rank": 9,
    "samples": [
      {
        "applying": false,
        "date": "2025-03-10",
        "natalHouse": 8,
        "natalSign": "Cancer",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-11",
        "natalHouse": 8,
        "natalSign": "Cancer",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-12",
        "natalHouse": 8,
        "natalSign": "Cancer",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-13",
        "natalHouse": 8,
        "natalSign": "Cancer",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-14",
        "natalHouse": 8,
        "natalSign": "Cancer",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-15",
        "natalHouse": 8,
        "natalSign": "Cancer",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": false,
        "date": "2025-03-16",
        "natalHouse": 8,
        "natalSign": "Cancer",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
    ],
    "separatingAtEnd": true,
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": true,
    "aspect": {
      "id": 6,
      "name": "Sextile",
    },
    "exactInRange": false,
    "exactPeakTime": null,
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-16",
    "planet1": "Saturn",
    "planet1House": 4,
    "planet1Sign": "Pisces",
    "planet2": "Uranus",
    "planet2House": 6,
    "planet2Sign": "Taurus",
    "rank": 10,
    "samples": [
      {
        "applying": true,
        "date": "2025-03-10",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 4,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-11",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 4,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-12",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-13",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-14",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-15",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-16",
        "natalHouse": 6,
        "natalSign": "Taurus",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
    ],
    "separatingAtEnd": false,
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": true,
    "aspect": {
      "id": 0,
      "name": "Conjunction",
    },
    "exactInRange": false,
    "exactPeakTime": null,
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-16",
    "planet1": "Sun",
    "planet1House": 3,
    "planet1Sign": "Pisces",
    "planet2": "True North Node",
    "planet2House": 4,
    "planet2Sign": "Pisces",
    "rank": 11,
    "samples": [
      {
        "applying": true,
        "date": "2025-03-10",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-11",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-12",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-13",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-14",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-15",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-16",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
    ],
    "separatingAtEnd": false,
  },
  {
    "activeFrom": "2025-03-10",
    "activeUntil": "2025-03-16",
    "applyingAtStart": true,
    "aspect": {
      "id": 0,
      "name": "Conjunction",
    },
    "exactInRange": false,
    "exactPeakTime": null,
    "firstSeen": "2025-03-10",
    "minimumOrbDate": "2025-03-16",
    "planet1": "Sun",
    "planet1House": 3,
    "planet1Sign": "Pisces",
    "planet2": "True South Node",
    "planet2House": 4,
    "planet2Sign": "Pisces",
    "rank": 12,
    "samples": [
      {
        "applying": true,
        "date": "2025-03-10",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-11",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-12",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-13",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-14",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-15",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
      {
        "applying": true,
        "date": "2025-03-16",
        "natalHouse": 4,
        "natalSign": "Pisces",
        "transitHouse": 3,
        "transitSign": "Pisces",
      },
    ],
    "separatingAtEnd": false,
  },
]
`;

exports[`Valid Call calculateTransitsForRange with valid parameters 4`] = `
[
  {
    "exactTimestamp": null,
    "firstSeenDate": "2025-03-10",
    "fromSign": "Cancer",
    "houseAfterIngress": 8,
    "planet": "Moon",
    "toSign": "Leo",
  },
  {
    "exactTimestamp": null,
    "firstSeenDate": "2025-03-13",
    "fromSign": "Leo",
    "houseAfterIngress": 9,
    "planet": "Moon",
    "toSign": "Virgo",
  },
  {
    "exactTimestamp": null,
    "firstSeenDate": "2025-03-15",
    "fromSign": "Virgo",
    "houseAfterIngress": 10,
    "planet": "Moon",
    "toSign": "Libra",
  },
]
`;

exports[`Valid Call calculateTransitsForRange with valid parameters 5`] = `
[
  {
    "exactTimestamp": null,
    "firstSeenDate": "2025-03-15",
    "planet": "True North Node",
    "sign": "Pisces",
    "stationType": "direct",
  },
  {
    "exactTimestamp": null,
    "firstSeenDate": "2025-03-15",
    "planet": "True South Node",
    "sign": "Pisces",
    "stationType": "direct",
  },
  {
    "exactTimestamp": null,
    "firstSeenDate": "2025-03-16",
    "planet": "Mercury",
    "sign": "Aries",
    "stationType": "retrograde",
  },
]
`;

exports[`Valid Call calculateTransitsForRange with valid parameters 6`] = `
[
  {
    "date": "2025-03-10",
    "majorMoonAspects": [
      {
        "aspect": {
          "id": 5,
          "name": "Trine",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 2,
          "name": "Mercury",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 3,
          "name": "Semi Square",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 5,
          "name": "Jupiter",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 5,
          "name": "Trine",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 8,
          "name": "Neptune",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 1,
          "name": "Opposition",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 9,
          "name": "Pluto",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 2,
          "name": "Square",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 105,
          "name": "Lilith",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 5,
          "name": "Trine",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 103,
          "name": "True North Node",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 5,
          "name": "Trine",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 104,
          "name": "True South Node",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 5,
          "name": "Trine",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 100,
          "name": "Ascendant",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 6,
          "name": "Sextile",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 108,
          "name": "Descendant",
        },
        "typeOfAspect": "natal-to-natal",
      },
    ],
    "moonSign": {
      "cuspWarning": "Cancer",
      "isVoidOfCourse": false,
      "phase": "Waxing Gibbous",
      "value": "Leo",
    },
    "voidOfCourseWindows": [],
  },
  {
    "date": "2025-03-11",
    "majorMoonAspects": [
      {
        "aspect": {
          "id": 5,
          "name": "Trine",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 2,
          "name": "Mercury",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 5,
          "name": "Trine",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 3,
          "name": "Venus",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 6,
          "name": "Sextile",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 5,
          "name": "Jupiter",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 4,
          "name": "Sesquiquadrate",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 8,
          "name": "Neptune",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 5,
          "name": "Trine",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 15,
          "name": "Chiron",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 4,
          "name": "Sesquiquadrate",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 103,
          "name": "True North Node",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 4,
          "name": "Sesquiquadrate",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 104,
          "name": "True South Node",
        },
        "typeOfAspect": "natal-to-natal",
      },
    ],
    "moonSign": {
      "cuspWarning": null,
      "isVoidOfCourse": false,
      "phase": "Waxing Gibbous",
      "value": "Leo",
    },
    "voidOfCourseWindows": [],
  },
  {
    "date": "2025-03-12",
    "majorMoonAspects": [
      {
        "aspect": {
          "id": 4,
          "name": "Sesquiquadrate",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 2,
          "name": "Mercury",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 4,
          "name": "Sesquiquadrate",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 3,
          "name": "Venus",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 2,
          "name": "Square",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 7,
          "name": "Uranus",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 5,
          "name": "Trine",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 15,
          "name": "Chiron",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 6,
          "name": "Sextile",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 105,
          "name": "Lilith",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 2,
          "name": "Square",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 100,
          "name": "Ascendant",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 2,
          "name": "Square",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 108,
          "name": "Descendant",
        },
        "typeOfAspect": "natal-to-natal",
      },
    ],
    "moonSign": {
      "cuspWarning": null,
      "isVoidOfCourse": false,
      "phase": "Waxing Gibbous",
      "value": "Leo",
    },
    "voidOfCourseWindows": [],
  },
  {
    "date": "2025-03-13",
    "majorMoonAspects": [
      {
        "aspect": {
          "id": 2,
          "name": "Square",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 5,
          "name": "Jupiter",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 4,
          "name": "Sesquiquadrate",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 15,
          "name": "Chiron",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 2,
          "name": "Square",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 100,
          "name": "Ascendant",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 2,
          "name": "Square",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 108,
          "name": "Descendant",
        },
        "typeOfAspect": "natal-to-natal",
      },
    ],
    "moonSign": {
      "cuspWarning": null,
      "isVoidOfCourse": false,
      "phase": "Full Moon",
      "value": "Virgo",
    },
    "voidOfCourseWindows": [],
  },
  {
    "date": "2025-03-14",
    "majorMoonAspects": [
      {
        "aspect": {
          "id": 1,
          "name": "Opposition",
        },
        "planet1": {
          "id": 0,
          "name": "Sun",
        },
        "planet2": {
          "id": 1,
          "name": "Moon",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 6,
          "name": "Sextile",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 4,
          "name": "Mars",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 2,
          "name": "Square",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 5,
          "name": "Jupiter",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 1,
          "name": "Opposition",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 6,
          "name": "Saturn",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 5,
          "name": "Trine",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 7,
          "name": "Uranus",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 1,
          "name": "Opposition",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 8,
          "name": "Neptune",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 4,
          "name": "Sesquiquadrate",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 9,
          "name": "Pluto",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 1,
          "name": "Opposition",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 103,
          "name": "True North Node",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 1,
          "name": "Opposition",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 104,
          "name": "True South Node",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 0,
          "name": "Conjunction",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 109,
          "name": "MidHeaven",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 1,
          "name": "Opposition",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 107,
          "name": "Nadir",
        },
        "typeOfAspect": "natal-to-natal",
      },
    ],
    "moonSign": {
      "cuspWarning": null,
      "isVoidOfCourse": false,
      "phase": "Full Moon",
      "value": "Virgo",
    },
    "voidOfCourseWindows": [],
  },
  {
    "date": "2025-03-15",
    "majorMoonAspects": [
      {
        "aspect": {
          "id": 1,
          "name": "Opposition",
        },
        "planet1": {
          "id": 0,
          "name": "Sun",
        },
        "planet2": {
          "id": 1,
          "name": "Moon",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 1,
          "name": "Opposition",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 2,
          "name": "Mercury",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 1,
          "name": "Opposition",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 3,
          "name": "Venus",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 1,
          "name": "Opposition",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 8,
          "name": "Neptune",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 5,
          "name": "Trine",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 9,
          "name": "Pluto",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 1,
          "name": "Opposition",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 103,
          "name": "True North Node",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 1,
          "name": "Opposition",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 104,
          "name": "True South Node",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 6,
          "name": "Sextile",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 100,
          "name": "Ascendant",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 0,
          "name": "Conjunction",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 109,
          "name": "MidHeaven",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 5,
          "name": "Trine",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 108,
          "name": "Descendant",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 1,
          "name": "Opposition",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 107,
          "name": "Nadir",
        },
        "typeOfAspect": "natal-to-natal",
      },
    ],
    "moonSign": {
      "cuspWarning": null,
      "isVoidOfCourse": false,
      "phase": "Full Moon",
      "value": "Libra",
    },
    "voidOfCourseWindows": [],
  },
  {
    "date": "2025-03-16",
    "majorMoonAspects": [
      {
        "aspect": {
          "id": 1,
          "name": "Opposition",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 2,
          "name": "Mercury",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 1,
          "name": "Opposition",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 3,
          "name": "Venus",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 2,
          "name": "Square",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 4,
          "name": "Mars",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 5,
          "name": "Trine",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 5,
          "name": "Jupiter",
        },
        "typeOfAspect": "natal-to-natal",
      },
      {
        "aspect": {
          "id": 1,
          "name": "Opposition",
        },
        "planet1": {
          "id": 1,
          "name": "Moon",
        },
        "planet2": {
          "id": 15,
          "name": "Chiron",
        },
        "typeOfAspect": "natal-to-natal",
      },
    ],
    "moonSign": {
      "cuspWarning": null,
      "isVoidOfCourse": false,
      "phase": "Full Moon",
      "value": "Libra",
    },
    "voidOfCourseWindows": [],
  },
]
`;
